--- a/public/css/common.css
+++ b/public/css/common.css
@@ -9,9 +9,8 @@
 
 body {
   font-family: 'Roboto';
-  background: black;
+  background: #2d7254;
   color: white;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 0%, rgba(14, 180, 0, 0.9070815826330532) 40%, rgba(255, 255, 255, 1) 100%);
 }
 
 img {
@@ -29,10 +28,7 @@ img {
 .hex {
   zoom: 0.5;
   max-height: 275px;
-  /* max-width: 306;
-  max-height: 396;
-  min-width: 306;
-  min-height: 396; */
+  max-width: calc(30%);
 }
 
 .hex-nozoom {
@@ -89,16 +85,71 @@ a {
   color: gray;
 }
 
-.packt-block {
-  transition: width 1s ease-in-out;
-  display: inline-block;
-  margin-right: 8%;
-  vertical-align: top;
+.button {
+  display: flex;
+  align-items: center;
+  backface-visibility: hidden;
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+  background: #0f7c10;
+  border-radius: 0px;
+  border: 1px solid #ffffff;
+  border-width: 1px 1px 1px 1px;
+  padding: 10px 20px 10px 20px;
+  box-shadow: 0px 0px 0px #ffffff, 0px 1px 3px rgba(0%, 0%, 0%, 0.3);
+  color: #fff;
+  font-size: 16px;
+  font-family: Arial;
+  font-weight: 900;
+  font-style: normal;
+  text-decoration: none;
+  text-shadow: 0px -1px 0px rgba(0%, 0%, 0%, 0.4)
 }
 
-@media (max-width: 600px) {
-  .packt-block {
-    display: block;
-    margin-right: 0%;
-  }
+.button:hover {
+  color: fff;
+}
+
+.button>div {
+  color: #999;
+  font-size: 10px;
+  font-family: Helvetica Neue;
+  font-weight: initial;
+  font-style: normal;
+  text-align: center;
+  margin: 0px 0px 0px 0px
+}
+
+.button>i {
+  font-size: 1em;
+  border-radius: 0px;
+  border: 0px solid transparent;
+  border-width: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 00px;
+  margin: 0px 0px 0px 0px;
+  position: static
+}
+
+.button>.ld {
+  font-size: initial
+}
+
+.vs-code {
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAACXBIW…DdPqXsY7V9kNJPk9Lsnn3028dF++hDQR8AAAAAQIL5/wFztOuM28dnBAAAAABJRU5ErkJggg==);
+  background-size: 24px 24px;
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: left 50%;
+  padding-left: 36px;
+  font-size: 20px;
+  letter-spacing: -0.04rem;
+  color: white;
+  min-height: 50px;
+  padding-top: 15px;
+  line-height: 20px;
+}
+
+a {
+  color: #fff
 }
